--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Homework</title>
 	<link rel="stylesheet" href="css/1.css">
 	<link rel="shortcut icon" href="img/favicon.png">
+	<script src='app.js' defer></script>
 </head>
 <body>
 	<header>
