--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 			<div class="mnu"><p> <input type="checkbox" name="d6" id="d6"/><label for="d6"><span>1 bottle of Sake <span class="small-text">(for my friends)</span></span></label></p></div>
 		</div>
 	</main>
+	<div class="hidden-info">
+		“Введите, что нужно купить” 
+	</div>
 	<footer>
 		<a href="http://flukeout.github.io/"  target="_blank"><div><p>Bon appetit :)</p></div></a>
 	</footer>
